[package]
name = "busse-shopfloor-rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env-file-reader = "0.3.0"
bson = { git = "https://github.com/mongodb/bson-rust", branch = "main" }
mongodb = "2.2.2"
serde_with = "1.3.1"
tokio = "1.19.2"
futures = "0.3.21"

[dependencies.async-std]
version = "1.9.0"
optional = true

[dependencies.async-std-resolver]
version = "0.21.1"
optional = true

[dependencies.reqwest]
version = "0.11.11"
optional = true
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0.125"
features = ["derive"]

[dependencies.serde_bytes]
version = "0.11.5"
optional = true

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]


[dev-dependencies]
approx = "0.5.1"
async_once = "0.2.6"
ctrlc = "3.2.2"
derive_more = "0.99.13"
function_name = "0.2.1"
futures = "0.3"
home = "0.5"
pretty_assertions = "1.1.0"
serde_json = "1.0.64"
semver = "1.0.0"
time = "0.3.9"